Added Surefire, jacoco and sonar for code analysis.