@@ -17,7 +17,6 @@
                 <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
           </license>
         </licenses>
-
         <scm>
                 <connection>scm:git:git://github.com/mosip/commons.git</connection>
                 <developerConnection>scm:git:ssh://github.com:mosip/commons.git</developerConnection>
@@ -56,6 +55,37 @@
         </distributionManagement> 
         <build>
           <plugins>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <version>2.22.0</version>
+                  <configuration>
+                      <skipTests>${skipTests}</skipTests>
+                      <skip>false</skip>
+                      <argLine>
+                          ${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
+                      </argLine>
+                  </configuration>
+              </plugin>
+              <plugin>
+                  <groupId>org.jacoco</groupId>
+                  <artifactId>jacoco-maven-plugin</artifactId>
+                  <version>0.8.5</version>
+                  <executions>
+                      <execution>
+                          <goals>
+                              <goal>prepare-agent</goal>
+                          </goals>
+                      </execution>
+                      <execution>
+                          <id>report</id>
+                          <phase>prepare-package</phase>
+                          <goals>
+                              <goal>report</goal>
+                          </goals>
+                      </execution>
+                  </executions>
+              </plugin>
             <plugin>
               <artifactId>maven-deploy-plugin</artifactId>
               <version>2.8.1</version>
@@ -171,4 +201,35 @@
            <module>kernel</module>
            <module>commons-packet</module>
         </modules>
+    <profiles>
+        <profile>
+            <id>sonar</id>
+            <properties>
+                <sonar.sources>.</sonar.sources>
+                <sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
+                <sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                        <version>3.7.0.1746</version>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sonar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
